# bilidownloader

./: .gitignore  GEMINI.md  README.md  Taskfile.yml  pyproject.toml
bilidownloader/: __init__.py  __main__.py  alias.py  api.py  api_model.py  assresample.py  chapter_processor.py  common.py  extractor.py  filesystem.py  fontmanager.py  history.py  history_migrator.py  history_repository.py  metadata.py  metadata_editor.py  orchestrator.py  srtgapfill.py  srttoass.py  updater.py  utils.py  video_downloader.py  watchlist.py
bilidownloader/apis/: __init__.py  api.py  models.py
bilidownloader/cli/: __init__.py  application.py  callbacks.py  download.py  history.py  main.py  options.py  schedule.py  today.py  userdir.py  watchlist.py
bilidownloader/commons/: __init__.py  alias.py  constants.py  filesystem.py  ui.py  updater.py  utils.py
bilidownloader/downmux/: chapter_processor.py  fontmanager.py  metadata_editor.py  orchestrator.py  ytdlp.py
bilidownloader/history/: __init__.py  history.py  migration.py  repository.py
bilidownloader/subtitles/: __init__.py  arabic_processor.py  assresample.py  gap_filler.py  srtgapfill.py  srttoass.py  subtitle_io.py  subtitle_reporter.py  time_converter.py
bilidownloader/watchlist/: __init__.py  migration.py  repository.py  watchlist.py
man/: bilidownloader-download.1  bilidownloader-history-clear.1  bilidownloader-history-list.1  bilidownloader-history-query.1  bilidownloader-history.1  bilidownloader-released.1  bilidownloader-schedule.1  bilidownloader-today.1  bilidownloader-watchlist-add.1  bilidownloader-watchlist-delete.1  bilidownloader-watchlist-download.1  bilidownloader-watchlist-list.1  bilidownloader-watchlist.1  bilidownloader.1
