[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilidownloader"
authors = [
	{name = "nattadasu", email = "hello@nattadasu.my.id"}
]
version = "3.0.6"
description = "Assist you in ripping episode from BiliIntl"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
classifiers = [
	"Topic :: Multipedia :: Video"
]
keywords = ["anime"]
dependencies = [
	"alive-progress",               # progress bar for history migration
    "platformdirs",                 # for platform-dependent config path
	"fake-useragent",               # for random user agent
	"langcodes",                    # Apply language track title for subtitles
	"notify-py",                    # for notification
	"Pillow",                       # for image processing and thumbnail resizing
	"pydantic",                     # for data schema and dataclass
	"requests >= 2.32.3",           # for http request, required to access Bilibili API and HTML
	"semver",                       # for version comparison
	"survey",                       # for interactive prompt in CLI
	"thefuzz",                      # for fuzzy string matching in history search
	"typer >= 0.13.1",              # backend for CLI
	"yt-dlp[default] >= 2025.3.26", # the most important dependency, downloader
]

[project.optional-dependencies]
ass = [
	"ass",            # parsing Advanced SubStation Alpha subtiltes
	"matplotlib",     #  only used to get all system fonts and allow download ASS
]
dev = [
    "yamllint",      # lint yaml
    "ruff",           # type and syntax check
]

[project.scripts]
bilidownloader = "bilidownloader.__main__:app"

[tool.setuptools]
packages = ["bilidownloader"]

[tool.setuptools.data-files]
"share/man/man1" = [
    "man/bilidownloader.1",
    "man/bilidownloader-download.1",
    "man/bilidownloader-today.1",
    "man/bilidownloader-released.1",
    "man/bilidownloader-schedule.1",
    "man/bilidownloader-history.1",
    "man/bilidownloader-history-list.1",
    "man/bilidownloader-history-query.1",
    "man/bilidownloader-history-clear.1",
    "man/bilidownloader-watchlist.1",
    "man/bilidownloader-watchlist-list.1",
    "man/bilidownloader-watchlist-add.1",
    "man/bilidownloader-watchlist-delete.1",
    "man/bilidownloader-watchlist-download.1",
]
