[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilidownloader"
authors = [
	{name = "nattadasu", email = "hello@nattadasu.my.id"}
]
version = "4.6.0"
description = "Assist you in ripping episode from BiliIntl"
requires-python = ">=3.11,<3.14"
license = { text = "GPL-3.0-or-later" }
classifiers = [
	"Topic :: Multipedia :: Video"
]
keywords = ["anime"]
dependencies = [
	"alive-progress",               # progress bar for history migration
	"ass",                          # parsing Advanced SubStation Alpha subtitles
    "platformdirs",                 # for platform-dependent config path
	"fake-useragent",               # for random user agent
	"FindSystemFontsFilename",      # lightweight library to get system fonts paths
	"fontTools",                    # font file parsing for name extraction
	"langcodes",                    # Apply language track title for subtitles
	"notify-py",                    # for notification
	"Pillow",                       # for image processing and thumbnail resizing
	"psutil",                       # for process information (shell detection)
	"pydantic",                     # for data schema and dataclass
	"requests >= 2.32.3",           # for http request, required to access Bilibili API and HTML
	"semver",                       # for version comparison
	"survey",                       # for interactive prompt in CLI
	"thefuzz",                      # for fuzzy string matching in history search
	"typer >= 0.13.1",              # backend for CLI
	"typer-di",                     # dependency injection for Typer
	"yt-dlp[default] >= 2025.3.26", # the most important dependency, downloader
]

[project.optional-dependencies]
ass = [
	"ass",                          # parsing Advanced SubStation Alpha subtitles
	"FindSystemFontsFilename",      # lightweight library to get system fonts paths
	"fontTools",                    # font file parsing for name extraction
]
dev = [
    "yamllint",       # lint yaml
    "ruff",           # type and syntax check
]

[project.scripts]
bilidownloader = "bilidownloader.cli.main:app"

[tool.setuptools]
packages = [
    "bilidownloader",
    "bilidownloader.apis",
    "bilidownloader.cli",
    "bilidownloader.commons",
    "bilidownloader.downmux",
    "bilidownloader.history",
    "bilidownloader.subtitles",
    "bilidownloader.watchlist",
]
